<resources>
    <string name="app_name">Thug Talk</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="translate">translate</string>
    <string name="enter_text">Enter text</string>
    <string name="thug_talk">Thug Talk</string>
    <string name="copy">copy</string>
    <string name="about_app">about app</string>
    <string name="theme">Theme</string>
    <string name="thug_search">thug search</string>
    <string name="backend">This app uses Gizoogle website as its backend</string>
    <string name="created_by">Created by: Saurabh Odukle</string>
    <string name="follow">follow</string>
    <string name="contact">Contact</string>
    <string name="adMob_appId">ca-app-pub-2305812457864678~9479946802</string>
    <string name="banner_unitId">ca-app-pub-2305812457864678/3277817767</string>
    <string name="interstitial_unitId">ca-app-pub-2305812457864678/6833919399</string>
    <string name="interstitial_testId">ca-app-pub-3940256099942544/2247696110</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="tip">Tip - writing full sentences will get you better translations.</string>
</resources>