<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".AboutApp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_aa"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:title="@string/about_app"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/app_name_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:letterSpacing="0.2"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:src="@drawable/app_icon"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:src="@drawable/odukle"
                    app:civ_border_width="2dp"
                    android:layout_marginTop="10dp"
                    app:civ_border_color="#FF000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/details_card"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:elevation="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/created_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/odukle_card"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/odukle_card"
                        android:text="@string/created_by"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_follow"
                    android:layout_width="186dp"
                    android:layout_height="52dp"
                    app:cornerRadius="26dp"
                    android:layout_marginTop="5dp"
                    android:onClick="openInsta"
                    android:tag="https://www.instagram.com/odukle.jpg"
                    android:text="@string/follow"
                    app:icon="@drawable/ic_instagram" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="186dp"
                    android:layout_height="52dp"
                    app:cornerRadius="26dp"
                    android:layout_marginTop="0dp"
                    android:onClick="openEmail"
                    android:tag="sodukle@gmail.com"
                    android:text="@string/contact"
                    app:icon="@drawable/ic_envelope" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            app:cardCornerRadius="10dp"
            android:visibility="gone">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backend"
                android:layout_margin="10dp"
                android:textSize="15sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="This app uses gizoogle website in back-end"
            android:textStyle="italic"
            android:gravity="bottom|center_horizontal"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</LinearLayout>